Python/py3.txt
/Users/applaleks/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020
  warnings.warn(
Traceback (most recent call last):
  File "/Users/applaleks/VarMac/Python/myFirstParser.py", line 1, in <module>
    import requests
  File "/Users/applaleks/Library/Python/3.9/lib/python/site-packages/requests/__init__.py", line 45, in <module>
    from .exceptions import RequestsDependencyWarning
  File "/Users/applaleks/Library/Python/3.9/lib/python/site-packages/requests/exceptions.py", line 9, in <module>
    from .compat import JSONDecodeError as CompatJSONDecodeError
  File "/Users/applaleks/Library/Python/3.9/lib/python/site-packages/requests/compat.py", line 47, in <module>
    from http import cookiejar as cookielib
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/http/cookiejar.py", line 32, in <module>
    import copy
  File "/Users/applaleks/VarMac/Python/copy.py", line 13
    return again()
    ^
SyntaxError: 'return' outside function
